2011-01-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* auth-source.el (auth-source-create): Add the optional second
	parameter to `local-variable-p' to be compatible with XEmacs.

2011-01-02  Wang Diancheng  <dcwang@kingbase.com.cn>  (tiny change)

	* nnml.el (nnml-request-article): Allow requesting by Message-ID to
	work when using a compressed nnml folder.

2011-01-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-select-newsgroup): Don't propagate marks to
	backends after sanitising on entry, because this never makes sense:
	If the articles have gone missing, then the data no longer exists on
	the backend, and if they haven't, then Gnus is wrong, and shouldn't
	overwrite anything anyway.

	* shr.el (shr-insert-document): Bind shr-width dynamically to
	window-width if it's nil.

2010-12-30  Tassilo Horn  <tassilo@member.fsf.org>

	* shr.el (shr-width, shr-insert-document): Allow nil as shr-width value
	with the meaning of using the full emacs window width for rendering.

2010-12-27  Daiki Ueno  <ueno@unixuser.org>

	* mml2015.el (mml2015-epg-sign, mml2015-epg-encrypt): Take care the
	case when sender is not given.

2010-12-23  Julien Danjou  <julien@danjou.info>

	* gnus-gravatar.el (gnus-gravatar-transform-address): Set
	`mail-extr-ignore-realname-equals-mailbox-name' to nil when extracting
	the addresses, otherwise we might misplaced the gravatar.

2010-12-21  Daiki Ueno  <ueno@unixuser.org>

	* mml1991.el (pgg-sign-region, pgg-encrypt-region):
	* gnus-art.el (pgg-snarf-keys-region): Autoload since PGG is now
	obsolete in Emacs.

2010-12-20  Julien Danjou  <julien@danjou.info>

	* gnus-util.el (gnus-rescale-image): Revert last change.

2010-12-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-delete-articles): New command.

2010-12-17  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-mode): Make sure 'gnus-registry-install is bound.

2010-12-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>
